Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0-beta1
-
53115259baa522d0d2d8f05aaa058693b1de62a8 (qt-creator/qt-creator/master)
Description
When a CMake based project fails to configure (also legitimately, e.g. because some required external dependency is missing) the loaded project is practically useless, even for tasks like browsing project history that would not require any building.
This way less usable than opening the same project with qmake, even with a dummy project created using qmake -project
Attachments
Issue Links
- relates to
-
QTBUG-73351 Transition to CMake
- Closed
-
QTCREATORBUG-25994 Unnecessary "<File System>" node in the Projects tree
- Closed