src/plugins/cmakeprojectmanager/fileapidataextractor.h
@@ -31,6 +31,7 @@
 #include <projectexplorer/rawprojectpart.h>
 
 #include <utils/fileutils.h>
+#include <utils/optional.h>
 
 #include <QList>
 #include <QSet>
@@ -58,6 +59,10 @@ public:
 FileApiQtcData extractData(FileApiData &data,
                            const Utils::FilePath &sourceDirectory,
                            const Utils::FilePath &buildDirectory);
+FileApiQtcData generateFallbackData(const Utils::FilePath &topCmakeFile,
+                                    const Utils::FilePath &sourceDirectory,
+                                    const Utils::FilePath &buildDirectory,
+                                    QString errorMessage);
 
 } // namespace Internal
 } // namespace CMakeProjectManager
